--- a/main.html
+++ b/main.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 <button onclick="this.innerHTML=Date()">this time is?</button>
+<p id="demo"></p>
+
+
+
+
+
+
+
 <script src="./test.js"></script>
 
 
