--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <button onclick="this.innerHTML=Date()">this time is?</button>
-<p id="demo"></p>
+<p id="demo">para one</p>
+<p id="p2">para 2</p>
 <!--<ul>-->
 <!--    <li></li>-->
 <!--</ul>-->
